# Safe-Mind-Engine

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  docker-compose.production-smoke.yml  pyproject.toml
data/: filter_eval_cases.jsonl
docs/: AI_AGENT_CONTEXT.md  README.md  architecture.md  aws-production.md  embedding-vector-store.md  eval-ui.md  evaluation.md  frontend-api-contract.md  handoff.md  pipeline.md  production-readiness.md  psychological-analyzer.md
safe_mind/: __init__.py  bedrock_runtime.py  lambda_finalizer.py  lambda_handler.py  main.py  openai_curl_client.py  pipeline.py
scripts/: check_mongodb_connection.py  create_whatsapp_template.py  create_whatsapp_verification_template.py  evaluate_filter_dataset.py  finalize_previous_day.py  list_whatsapp_templates.py  probe_openai_message_scores.py  rebuild_parent_alert_decisions.py  run_pipeline_debug.py  seed_alert_demo_data.py  seed_message_pipeline_demo_data.py  seed_metric_streak_pipeline_dataset.py  seed_next_integration_15_day_alert_dataset.py  send_whatsapp_smoke.py  smoke_openai_filter.py  smoke_pipeline.py
tests/: conftest.py  test_alert_engine.py  test_app_auth.py  test_embeddings.py  test_emotional_filter.py  test_eval_ui.py  test_finalization.py  test_health.py  test_ingestion.py  test_lambda_handlers.py  test_metrics.py  test_next_alerts.py  test_next_integration.py  test_openai_emotional_filter.py  test_pipeline.py  test_privacy_redactor.py  test_production_config.py  test_psychological_analyzer.py  test_storage_factory.py  (+2 more)
(+47 files in other folders)
