[project]
name = "safe-mind"
version = "0.1.0"
description = "SafeMind backend pilot for child-device signals and parent alerts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pymongo[srv]>=4.8.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["safe_mind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
